--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
+      -allow_failure: true
 
   prod:
     docker:
