Update CI script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,14 @@ jobs:
     steps:
       - checkout
       - run: echo "This is a test step"
+  release:
+    machine: true                                        # What is this for?
+    steps:
+      - checkout
 
+      - run: |
+          docker build -t $DOCKER_USERNAME/django.nv .   # Build the application into Docker image
+          docker push $DOCKER_USERNAME/django.nv         # Push the image into registry
   integration:
     docker:
       - image: cimg/base:stable
@@ -46,35 +53,8 @@ workflows:
   django:
     jobs:
       - build:
-          filters:          # Run the job with a specific branch
-            branches:
-              only:
-                - main
       - test:
-          requires:
-            - build
-          filters:
-            branches:
-              only:
-                - main
       - integration:
-          requires:
-            - test
-          filters:
-            branches:
-              only:
-                - main
       - prod:
           requires:
-            - integration
-          filters:
-            branches:
-              only:
-                - main
-      - artifact:
-          requires:
-            - prod
-          filters:
-            branches:
-              only:
-                - main
+            - integration 
