--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,15 +16,7 @@ jobs:
       - run: |
           pip install -r requirements.txt
           python manage.py test taskManager
-  release:
-    machine: true                                        # What is this for?
-    steps:
-      - checkout
 
-      - run: |
-          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-          docker build -t /django.nv .   # Build the application into Docker image
-          docker push /django.nv         # Push the image into registry
   integration:
     docker:
       - image: python:3.6
@@ -34,14 +26,13 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
-          when: on_fail                   # Even if the job fails, continue to the next stages
 
   prod:
     docker:
       - image: python:3.6
     steps:
       - checkout
-      - run: echo "This is a 'deploy' step."
+      - run: echo "This is a deploy step."
 
 workflows:
   version: 2
