--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,16 @@ jobs:
       - run: |
           pip install -r requirements.txt
           python manage.py test taskManager
+  oast:
+    machine: true
+    steps:
+      - checkout
 
+      - run: docker run -v $(pwd):/src --rm hysnsec/safety check -r /src/requirements.txt --json | tee oast-results.json
+
+      - store_artifacts:
+          path: oast-results.json
+          destination: safety-artifact
   integration:
     docker:
       - image: python:3.6
@@ -34,14 +43,21 @@ jobs:
       - checkout
       - run: echo "This is a deploy step."
 
-workflows:
-  version: 2
-  django:
-    jobs:
-      - build
-      - test
-      - integration
-      - prod:
-          type: approval
-          requires:
-            - integration
+  workflows:
+    version: 2
+    django:
+      jobs:
+        - build
+        - test:
+            requires:
+              - build
+        - oast:
+            requires:
+              - test
+          - integration:
+            requires:
+              - oast
+          - prod:
+              type: approval
+              requires:
+                - integration
