--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,16 +16,20 @@ jobs:
       - run: |
           pip install -r requirements.txt
           python manage.py test taskManager
+
   oast:
     machine: true
     steps:
       - checkout
 
-      - run: docker run -v $(pwd):/src --rm hysnsec/safety check -r /src/requirements.txt --json | tee oast-results.json
+      - run:
+          command: docker run -v $(pwd):/src --rm hysnsec/safety check -r /src/requirements.txt --json | tee oast-results.json || true
 
       - store_artifacts:
           path: oast-results.json
           destination: safety-artifact
+          when: always
+
   integration:
     docker:
       - image: python:3.6
@@ -35,29 +39,30 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
+          when: on_fail                    # Even if the job fails, continue to the next stages
 
   prod:
     docker:
       - image: python:3.6
     steps:
       - checkout
-      - run: echo "This is a deploy step."
+      - run: echo "This is a deploy step"
 
-  workflows:
-    version: 2
-    django:
-      jobs:
-        - build
-        - test:
-            requires:
-              - build
-        - oast:
-            requires:
-              - test
-        - integration:
-            requires:
-              - oast
-        - prod:
-              type: approval
-              requires:
-                - integration
+workflows:
+  version: 2
+  django:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
+      - oast:
+          requires:
+            - test
+      - integration:
+          requires:
+            - oast
+      - prod:
+          type: approval
+          requires:
+            - integration
