--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,18 +41,25 @@ jobs:
           pip install -r requirements.txt
           python manage.py test taskManager
 
-  oast:
+  oast-frontend:
     runs-on: ubuntu-22.04
     needs: test
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - run: docker run --rm -v $(pwd):/src hysnsec/safety check -r requirements.txt --json > oast-results.json
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '12.x'
+
+      - run: npm install
+
+      - run: docker run --rm -v $(pwd):/src -w /src hysnsec/retire --outputformat json --outputpath retirejs-report.json --severity high
 
       - uses: actions/upload-artifact@v4
+        name: "Upload RetireJS Artifact - v4"
         with:
-          name: Safety
-          path: oast-results.json
+          name: RetireJS
+          path: retirejs-report.json
         if: always()                        # what is this for?
 
   integration:
