--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,26 +41,33 @@ jobs:
           pip install -r requirements.txt
           python manage.py test taskManager
 
-  oast-frontend:
+  oast-snyk:
     runs-on: ubuntu-22.04
     needs: test
     steps:
       - uses: actions/checkout@v4
+      - uses: snyk/actions/setup@master
+      - uses: actions/setup-go@v5
+        with:
+          go-version: "1.21"
 
       - uses: actions/setup-node@v4
         with:
-          node-version: '12.x'
+          node-version: '20'
 
-      - run: npm install
+      - name: Install Node modules
+        run: npm install
 
-      - run: docker run --rm -v $(pwd):/src -w /src hysnsec/retire --outputformat json --outputpath retirejs-report.json --severity high
+      - name: Run Snyk
+        run: snyk test --json > snyk-results.json
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
       - uses: actions/upload-artifact@v4
-        name: "Upload RetireJS Artifact - v4"
         with:
-          name: RetireJS
-          path: retirejs-report.json
-        if: always()                        # what is this for?
+          name: Snyk
+          path: snyk-results.json
+        if: always()        # what is this for?
 
   integration:
     runs-on: ubuntu-22.04
