--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,10 +9,10 @@ jobs:
   build:
     runs-on: ubuntu-22.04                    # similar to "image" in GitLab
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Setup python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: '3.7'
 
@@ -27,10 +27,10 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Setup python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: '3.7'
 
@@ -59,9 +59,10 @@ jobs:
         run: npm install
 
       - name: Run Snyk
-        run: snyk test --json > snyk-results.json
+        run: snyk test --strict-out-of-sync=false --json > snyk-results.json
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        continue-on-error: true             # allow the build to fail, similar to allow_failure: true
 
       - uses: actions/upload-artifact@v4
         with:
@@ -71,7 +72,7 @@ jobs:
 
   integration:
     runs-on: ubuntu-22.04
-    needs: test
+    needs: oast-snyk
     steps:
       - run: echo "This is an integration step"
       - run: exit 1
