--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,27 +15,7 @@ jobs:
       - checkout
       - run: |
           pip install -r requirements.txt
-          python manage.py test taskManager || true
-
-  oast-snyk:
-    docker:
-      - image: node:alpine3.10
-    steps:
-      - checkout
-
-      - run: 
-          command: |
-            wget -O snyk https://github.com/snyk/cli/releases/download/v1.1156.0/snyk-alpine
-            chmod +x snyk
-            mv snyk /usr/local/bin/
-            npm install
-            snyk auth <INPUT_SNYK_TOKEN>
-            snyk test --json > snyk-results.json || true
-
-      - store_artifacts:
-          path: snyk-results.json
-          destination: snyk-artifact
-          when: always
+          python manage.py test taskManager
 
   integration:
     docker:
@@ -46,7 +26,6 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
-          when: on_fail         # Even if the job fails, continue to the next stages
 
   prod:
     docker:
@@ -60,15 +39,8 @@ workflows:
   django:
     jobs:
       - build
-      - test:
-          requires:
-            - build
-      - oast-snyk:
-          requires:
-            - test
-      - integration:
-          requires:
-            - oast-snyk
+      - test
+      - integration
       - prod:
           type: approval
           requires:
