--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,16 +16,19 @@ jobs:
       - run: |
           pip install -r requirements.txt
           python manage.py test taskManager
+
   secret_scanning:
     machine: true
     steps:
       - checkout
 
-      - run: docker run --rm -v $(pwd):/src hysnsec/trufflehog filesystem /src --json > trufflehog-output.json
+      - run:
+          command: docker run --rm -v $(pwd):/src hysnsec/trufflehog filesystem /src --json > trufflehog-output.json || true
 
       - store_artifacts:
           path: trufflehog-output.json
           destination: trufflehog-artifact
+          when: always
 
   integration:
     docker:
@@ -36,6 +39,7 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
+          when: on_fail         # Even if the job fails, continue to the next stages
 
   prod:
     docker:
@@ -62,4 +66,3 @@ workflows:
           type: approval
           requires:
             - integration
-
