Implement SAST step using Bandit in workflow
Add SAST step to GitHub Actions workflow for security analysis.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,6 +40,19 @@ jobs:
           source env/bin/activate
           pip install -r requirements.txt
           python manage.py test taskManager
+   sast:
+    runs-on: ubuntu-22.04
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+
+      - run: docker run --rm -v $(pwd):/src hysnsec/bandit -r /src -f json -o /src/bandit-output.json
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: Bandit
+          path: bandit-output.json
+        if: always()                        # what is this for?
 
   integration:
     runs-on: ubuntu-22.04
