--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,13 +40,15 @@ jobs:
           source env/bin/activate
           pip install -r requirements.txt
           python manage.py test taskManager
+
   sast:
     runs-on: ubuntu-22.04
-    needs: build
+    needs: test
     steps:
       - uses: actions/checkout@v2
 
       - run: docker run --rm -v $(pwd):/src hysnsec/bandit -r /src -f json -o /src/bandit-output.json
+        continue-on-error: true             # allow the build to fail, similar to allow_failure: true
 
       - uses: actions/upload-artifact@v4
         with:
