--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,6 +40,7 @@ jobs:
           source env/bin/activate
           pip install -r requirements.txt
           python manage.py test taskManager
+
   semgrep:
     name: semgrep/ci
     needs: test
@@ -51,11 +52,12 @@ jobs:
         with:
           name: semgrep
           path: semgrep-output.json
-        if: always()
+        continue-on-error: true             # allow the build to fail, similar to "allow_failure: true" in GitLab
+        if: always()                        # what is this for?
 
   integration:
     runs-on: ubuntu-22.04
-    needs: test
+    needs: semgrep
     steps:
       - run: echo "This is an integration step"
       - run: exit 1
