--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,18 +17,6 @@ jobs:
           pip install -r requirements.txt
           python manage.py test taskManager
 
-  sast:
-    machine: true
-    steps:
-      - checkout
-
-      - run: docker run --rm -v $(pwd):/src hysnsec/bandit -r /src -f json -o /src/bandit-output.json || true
-
-      - store_artifacts:
-          path: bandit-output.json
-          destination: bandit-artifact
-          when: always
-
   integration:
     docker:
       - image: python:3.6
@@ -38,7 +26,6 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
-          when: on_fail           # Even if the job fails, continue to the next stages
 
   prod:
     docker:
@@ -52,15 +39,8 @@ workflows:
   django:
     jobs:
       - build
-      - test:
-          requires:
-            - build
-      - sast:
-          requires:
-            - test
-      - integration:
-          requires:
-            - sast
+      - test
+      - integration
       - prod:
           type: approval
           requires:
