--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,12 @@ jobs:
       - run: |
           pip install -r requirements.txt
           python manage.py test taskManager
-          
+
   semgrep:
     machine: true
     steps:
       - checkout
-      - run: docker run --rm -v ${PWD}:/src returntocorp/semgrep semgrep --config auto --output semgrep-output.json --json
+      - run: docker run --rm -v ${PWD}:/src returntocorp/semgrep semgrep --config auto --output semgrep-output.json --json || true
       - store_artifacts:
           path: semgrep-output.json
           destination: semgrep-artifact
@@ -35,6 +35,7 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
+          when: on_fail         # Even if the job fails, continue to the next stages
 
   prod:
     docker:
