--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,64 +1,42 @@
 jobs:
   build:
     docker:
-      - image: python:3.6                   # similar to "image" in GitLab
+      - image: cimg/base:stable                   # similar to "image" in GitLab
     steps:
       - checkout
-      - run: |                              # similar to "script" in GitLab
-          pip install -r requirements.txt
-          python manage.py check
+      - run: echo "This is a build step"          # similar to "script" in GitLab
 
   test:
     docker:
-      - image: python:3.6
+      - image: cimg/base:stable
     steps:
       - checkout
-      - run: |
-          pip install -r requirements.txt
-          python manage.py test taskManager
-
-  semgrep:
-    machine: true
-    steps:
-      - checkout
-      - run: docker run --rm -v ${PWD}:/src returntocorp/semgrep semgrep --config auto --output semgrep-output.json --json || true
-      - store_artifacts:
-          path: semgrep-output.json
-          destination: semgrep-artifact
+      - run: echo "This is a test step"
 
   integration:
     docker:
-      - image: python:3.6
+      - image: cimg/base:stable
     steps:
       - checkout
       - run:
           command: |
             echo "This is an integration step"
             exit 1
-          when: on_fail         # Even if the job fails, continue to the next stages
+          when: on_fail                 # Even if the job fails, continue to the next stages
 
   prod:
     docker:
-      - image: python:3.6
+      - image: cimg/base:stable
     steps:
       - checkout
-      - run: echo "This is a deploy step."
+      - run: echo "This is a deploy step"
 
 workflows:
   version: 2
   django:
     jobs:
       - build
-      - test:
-          requires:
-            - build
-      - semgrep:
-          requires:
-            - test
-      - integration:
-          requires:
-            - semgrep
+      - test
+      - integration
       - prod:
           type: approval
-          requires:
-            - integration
