--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,18 @@ jobs:
             echo "This is an integration step"
             exit 1
           when: on_fail                 # Even if the job fails, continue to the next stages
+  zap_baseline:
+    machine: true
+    steps:
+      - checkout
+
+      - run: |
+          docker pull hysnsec/zap:2.16.1
+          docker run --user root --rm -v $(pwd):/zap/wrk:rw -w /zap hysnsec/zap:2.16.1 zap-baseline.py -t https://prod-4v56d5bb.lab.practical-devsecops.training -J zap-output.json || true
+
+      - store_artifacts:
+          path: zap-output.json
+          destination: zap-artifact
 
   prod:
     docker:
