--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,18 +23,17 @@ jobs:
             echo "This is an integration step"
             exit 1
           when: on_fail                 # Even if the job fails, continue to the next stages
-  zap_baseline:
+  nuclei:
     machine: true
     steps:
       - checkout
 
       - run: |
-          docker pull hysnsec/zap:2.16.1
-          docker run --user root --rm -v $(pwd):/zap/wrk:rw -w /zap hysnsec/zap:2.16.1 zap-baseline.py -t https://prod-4v56d5bb.lab.practical-devsecops.training -J zap-output.json || true
+          docker run --user $(id -u):$(id -g) -w /nuclei -v $(pwd):/nuclei:rw --rm projectdiscovery/nuclei:v2.9.6 -u https://prod-4v56d5bb.lab.practical-devsecops.training -j -o nuclei-output.json
 
       - store_artifacts:
-          path: zap-output.json
-          destination: zap-artifact
+          path: nuclei-output.json
+          destination: nuclei-artifact
 
   prod:
     docker:
@@ -54,10 +53,10 @@ workflows:
       - integration:
           requires:
             - test
-      - zap_baseline:
+      - nuclei:
           requires:
             - integration
       - prod:
           type: approval
           requires:
-            - zap_baseline
+            - nuclei
